nginx_ingress/deploy.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webpage-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - mtogo.live
      secretName: tls-secret
  rules:
    - host: mtogo.live
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: webpage
                port:
                  number: 3000
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8086
