nginx_ingress/nginx_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webpage-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - mtogo.live
      secretName: tls-secret
  rules:
    - host: mtogo.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webpage
                port:
                  number: 3000
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8086          
          - path: /api/restaurant
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 8083      
          - path: /api/order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8084   
          - path: /api/camel
            pathType: Prefix
            backend:
              service:
                name: camel-service
                port:
                  number: 9090
